# binius64-eas

./: CLAUDE.md  Cargo.toml  example-attest.json
src/: circuit.rs  cli.rs  eas.rs  gm_schema.rs  main.rs
