[package]
name = "binius64-eas"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
alloy = { version = "1.1.1", features = ["eip712"] }
anyhow = "1.0.100"
binius-circuits = { git = "https://github.com/binius-zk/binius64" }
binius-core = { git = "https://github.com/binius-zk/binius64" }
binius-examples = { git = "https://github.com/binius-zk/binius64" }
binius-frontend = { git = "https://github.com/binius-zk/binius64" }
binius-prover = { git = "https://github.com/binius-zk/binius64" }
binius-verifier = { git = "https://github.com/binius-zk/binius64" }
clap = { version = "4.5.52", features = ["derive"] }
eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
